--- a/themes/fumparfum/_dev/css/components/cart.scss
+++ b/themes/fumparfum/_dev/css/components/cart.scss
@@ -1,7 +1,38 @@
 #cart {
+    .no-items {
+        font-size: .875rem;
+    }
     .card {
         &.cart-container {
             border: 1px solid $gray-light;
+            margin-bottom: 2rem;
+        }
+    }
+    .cart-detailed-totals {
+        border: 1px solid $gray-light;
+        margin-bottom: 2rem;
+        .card-block{
+            padding: 1rem;
+            &:last-child {border-top: 1px solid $gray-light;}
+        }        
+    }
+    .cart-grid-right {
+        .cart-detailed-actions {
+            .btn {
+                text-transform: uppercase;
+                font-size: .75rem;
+                line-height: 2.5;
+                 > i {
+                    font-size: 1rem;
+                    line-height: 0.9;
+                }
+            }
+        }
+    }
+    .continue {
+        i {
+            font-size: 1rem;
+            line-height: 0.9;
         }
     }
 }
@@ -25,11 +56,20 @@
   .value {
     color: $brand-primary;
     float: right;
+      font-size: .875rem;
   }
+    
   &.cart-summary-subtotals {
     .label,
     .value {
       font-weight: normal;
+    }
+  }
+    &.cart-total {
+    .label,
+    .value {
+      font-weight: 600;
+        text-transform: uppercase;
     }
   }
 }
@@ -48,6 +88,7 @@
   }
   .cart-overview {
     padding: 1rem;
+      border-top: 1px solid $gray-light;
   }
   margin-bottom: 0.75rem;
 }
@@ -143,6 +184,7 @@
         &.title {
             text-transform: uppercase;
             font-size: 1.125rem;
+            font-family: 'Roboto', sans-serif; 
         }
             
     }
@@ -151,7 +193,11 @@
       color: red;
     }
       &.product-price {
-          &.h5 {font-size: .75rem;}
+          &.h5 {
+              font-size: .75rem;
+              margin-top: .75rem;
+              margin-bottom: 0;
+          }
       }
     > .available {
       color: $brand-success;
@@ -168,13 +214,14 @@
   .cart-line-product-actions,
   .product-price {
     color: $brand-primary;
-    line-height: 36px;
+//    line-height: 36px;
     .remove-from-cart {
       color: $brand-primary;
       display: inline-block;
       margin-top: 0.3125rem;
     }
   }
+    .product-price {line-height: 36px;}
 }
 
 /*** Responsive part ***/
