--- a/themes/fumparfum/_dev/css/components/block-reassurance.scss
+++ b/themes/fumparfum/_dev/css/components/block-reassurance.scss
@@ -1,18 +1,18 @@
 #block-reassurance{
-  margin-top: 2rem;
-    color: white;
+    margin-top: 2rem;
+    color: $brand-primary;
   img{
-margin-bottom: 1em;
+    margin-bottom: 1em;
   }
   li{
 //    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-
     &:last-child {
       border: 0;
     }
   }
-  li .block-reassurance-item{
+  li .block-reassurance-item {
     padding: 1rem 1.5rem;
+    font-size: .875rem;
   }
 //  #product &{
 //    @include box-shadow;
@@ -21,4 +21,19 @@ margin-bottom: 1em;
 //      font-weight: 700;
 //    }
 //  }
+}
+#cart,
+#checkout {
+    #block-reassurance {
+        li {
+            &:nth-child(2) {
+                .block-reassurance-item {
+                    img {margin-right: 2.1rem;}
+                }
+            }
+        }
+    }
+}
+#order-confirmation {
+    #block-reassurance {display: none;}
 }
