--- a/themes/fumparfum/_dev/css/components/customer.scss
+++ b/themes/fumparfum/_dev/css/components/customer.scss
@@ -161,7 +161,7 @@
 /*** Order details page ***/
 .page-order-detail {
   font-size: 0.875rem;
-  color: $gray;
+  color: $brand-primary;
   .box {
 //    @include customer-area-base-box;
     margin-bottom: 1rem;
@@ -170,8 +170,9 @@
     font-size: $base-font-size;
     font-weight: 700;
     text-transform: uppercase;
-    color: $gray-darker;
+    color: $gray-light;
     margin-bottom: 1rem;
+    padding-top: 1.5rem;
   }
   #order-infos {
     ul {
