--- a/themes/fumparfum/_dev/css/components/custom-text.scss
+++ b/themes/fumparfum/_dev/css/components/custom-text.scss
@@ -41,7 +41,11 @@
     .page-header {
         h1 {
             text-align: center;
-            margin-bottom: 3rem;
+            margin-bottom: 4rem;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            border-bottom: 1px solid $brand-primary;
+            padding-bottom: 2rem;
         }
     }
     .cms-sub-pages {
@@ -77,6 +81,19 @@
         padding: 1rem;
         h2 {font-size: 2.5rem;}
     }
+
 }
 
-
+@include media-breakpoint-down(sm) {
+    #cms {
+        .page-header {
+            h1 {
+                text-align: left;
+                padding-bottom: 1rem;
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
+    }
+}
+ 
