--- a/themes/fumparfum/_dev/css/theme.scss
+++ b/themes/fumparfum/_dev/css/theme.scss
@@ -612,7 +612,8 @@ footer .copyright {
 /*** WRAPPER ***/
 #category,
 #product,
-#new-products {
+#new-products,
+.cms-id-2 {
     #wrapper {
         .breadcrumb {
             border-bottom: none;
@@ -646,9 +647,9 @@ footer .copyright {
         background: transparent;
         padding: 0;
 //        justify-content: center;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid $brand-primary;
         text-transform: uppercase;
-        padding-bottom: 1rem;
+//        padding-bottom: 1rem;
         margin-bottom: 2rem;
         font-size: .75rem;
         &[data-depth="1"] {
@@ -755,13 +756,14 @@ footer .copyright {
             max-height: inherit;
             .search-widget {
                 float: none;
-                width: 15.63rem;
+                width: 100%;
+                input[type=text] {min-width: 75%;}
             }
         }
     }
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(md) {    
     .mobile-logo {
         background-color: black;
 
@@ -844,9 +846,26 @@ footer .copyright {
     .block-category {
         padding-bottom: 0;
     }
+    #header .header-nav { 
+        .row.w-100 {align-items: center;}
+        #_desktop_contact_link #contact-link {
+            flex-direction: column;
+            > * {margin-bottom: .5rem;}
+        }
+    }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(sm) {    
+    #category,
+    #product,
+    #new-products,
+    .cms-id-2 {
+        #wrapper {
+            .breadcrumb {
+                justify-content: flex-start;
+            }
+        }
+    }
     #wrapper {
         box-shadow: none;
     }
@@ -880,6 +899,9 @@ footer .copyright {
             .user-info {
                 text-align: left;
                 margin-left: 0;
+                margin-top: 0;
+                padding: .5rem 0 .5rem 1.5rem;
+                position: relative;
                 color: $gray-light;
                 a {
                     color: $gray-light;
@@ -887,24 +909,48 @@ footer .copyright {
                 .logged {
                     color: $brand-primary;
                 }
+                &:before {
+                    position: absolute;
+                    left: 0;
+                    top: 15%;
+                    content: "";
+                    display: inline-block;
+                    background: url('../img/img-sprite.png') no-repeat !important;
+                    overflow: hidden;
+                    text-indent: -9999px;
+                    text-align: left;
+                    background-position: -32px -674px!important;
+                    width: 24px;
+                    height: 25px;
+                }
             }
             .blockcart {
                 margin-left: 0;
                 background: inherit;
-                padding: .75rem 0;
-                &.active {
-//                    margin-left: 0.5rem;
-                }
-                &.inactive {
-                    .cart-products-count {
-                        display: none;
+                margin: .75rem 0;
+                border-left: 1px solid $gray-light;
+                padding: .25rem .25rem 0 .25rem;
+                height: auto;
+            }
+            #_mobile_search {
+                padding-right: 0;                
+                .search-widget {
+                    width: 100%;
+                    padding-top: .25rem;
+                    input[type=text] {width: 75%;}
+                    button[type=submit] {
+                        float: right;
+                        margin-right: .25rem;
                     }
                 }
-            }
+            }            
         }
         .header-top {
-            background: $gray-light;
+            background: $gray;
             padding-bottom: 0;
+            #_mobile_top_menu {
+                width: 100%;
+            }
             a[data-depth="0"] {
                 color: $brand-primary;
             }
@@ -912,12 +958,12 @@ footer .copyright {
                 width: 100%;
             }
         }
-        &.is-open {
-            background-color: white;
-            .header-top {
-                background-color: white;
-            }
-        }
+//        &.is-open {
+//            background-color: white;
+//            .header-top {
+//                background-color: white;
+//            }
+//        }
     }
     section.checkout-step {
         width: 100%;
