--- a/themes/fumparfum/_dev/css/partials/_fonts.scss
+++ b/themes/fumparfum/_dev/css/partials/_fonts.scss
@@ -98,112 +98,55 @@
 }
 
 
+/* roboto-regular - latin-ext_latin */
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular-webfont.eot');
-    src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-v18-latin-ext_latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto'), local('Roboto-Regular'),
+       url('../fonts/roboto-v18-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/roboto-v18-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/roboto-v18-latin-ext_latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-
+/* roboto-italic - latin-ext_latin */
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Italic-webfont.eot');
-    src: url('../fonts/Roboto-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Italic-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Italic-webfont.svg#RobotoItalic') format('svg');
-    font-weight: normal;
-    font-style: italic;
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../fonts/roboto-v18-latin-ext_latin-italic.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Italic'), local('Roboto-Italic'),
+       url('../fonts/roboto-v18-latin-ext_latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/roboto-v18-latin-ext_latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/roboto-v18-latin-ext_latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-
+/* roboto-700 - latin-ext_latin */
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold-webfont.eot');
-    src: url('../fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Bold-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Bold-webfont.svg#RobotoBold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/roboto-v18-latin-ext_latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Bold'), local('Roboto-Bold'),
+       url('../fonts/roboto-v18-latin-ext_latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/roboto-v18-latin-ext_latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/roboto-v18-latin-ext_latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-
+/* roboto-700italic - latin-ext_latin */
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-BoldItalic-webfont.eot');
-    src: url('../fonts/Roboto-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-BoldItalic-webfont.woff') format('woff'),
-         url('../fonts/Roboto-BoldItalic-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-BoldItalic-webfont.svg#RobotoBoldItalic') format('svg');
-    font-weight: bold;
-    font-style: italic;
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 700;
+  src: url('../fonts/roboto-v18-latin-ext_latin-700italic.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
+       url('../fonts/roboto-v18-latin-ext_latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/roboto-v18-latin-ext_latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-700italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v18-latin-ext_latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/roboto-v18-latin-ext_latin-700italic.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-
-//@font-face {
-//    font-family: 'Roboto';
-//    src: url('Roboto-Thin-webfont.eot');
-//    src: url('Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-//         url('Roboto-Thin-webfont.woff') format('woff'),
-//         url('Roboto-Thin-webfont.ttf') format('truetype'),
-//         url('Roboto-Thin-webfont.svg#RobotoThin') format('svg');
-//    font-weight: 200;
-//    font-style: normal;
-//}
-//
-//@font-face {
-//    font-family: 'Roboto';
-//    src: url('Roboto-ThinItalic-webfont.eot');
-//    src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
-//         url('Roboto-ThinItalic-webfont.woff') format('woff'),
-//         url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
-//         url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg'); (under the Apache Software License). 
-//    font-weight: 200;
-//    font-style: italic;
-//}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Light-webfont.eot');
-    src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Light-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Light-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Light-webfont.svg#RobotoLight') format('svg');
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-LightItalic-webfont.eot');
-    src: url('../fonts/Roboto-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-LightItalic-webfont.woff') format('woff'),
-         url('../fonts/Roboto-LightItalic-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-LightItalic-webfont.svg#RobotoLightItalic') format('svg');
-    font-weight: 100;
-    font-style: italic;
-}
-
-//@font-face {
-//    font-family: 'Roboto';
-//    src: url('Roboto-Medium-webfont.eot');
-//    src: url('Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-//         url('Roboto-Medium-webfont.woff') format('woff'),
-//         url('Roboto-Medium-webfont.ttf') format('truetype'),
-//         url('Roboto-Medium-webfont.svg#RobotoMedium') format('svg');
-//    font-weight: 300;
-//    font-style: normal;
-//}
-//
-//@font-face {
-//    font-family: 'Roboto';
-//    src: url('Roboto-MediumItalic-webfont.eot');
-//    src: url('Roboto-MediumItalic-webfont.eot?#iefix') format('embedded-opentype'),
-//         url('Roboto-MediumItalic-webfont.woff') format('woff'),
-//         url('Roboto-MediumItalic-webfont.ttf') format('truetype'),
-//         url('Roboto-MediumItalic-webfont.svg#RobotoMediumItalic') format('svg');
-//    font-weight: 300;
-//    font-style: italic;
-//}
