--- a/themes/fumparfum/_dev/css/components/checkout.scss
+++ b/themes/fumparfum/_dev/css/components/checkout.scss
@@ -134,6 +134,7 @@ body#checkout {
       h1 {
         .done {
           display: inline-block;
+            color: $gray-light;
         }
         .step-number {
           display: none;
@@ -273,6 +274,9 @@ body#checkout {
       background: $gray-lighter;
       padding: 0.9375rem 0;
       margin-bottom: 0.9375rem;
+      img {
+         max-width: 100%;
+      }
       label {
         text-align: inherit;
       }
