--- a/themes/fumparfum/_dev/css/components/errors.scss
+++ b/themes/fumparfum/_dev/css/components/errors.scss
@@ -12,11 +12,9 @@
     }
   }
   .page-not-found {
-//    @include box-shadow;
-//    background: white;
-    padding: 1rem;
+    padding-top: 1rem;
     font-size: $font-size-sm;
-    color: white;
+    color: $brand-primary;
 //    max-width: 570px;
     margin: 0 auto;
     h4 {
@@ -25,17 +23,35 @@
       margin: 0.5rem 0 1rem;
     }
     .search-widget {
-      float: none;
-        color: white;
-      input[type=text] {
-        width: 100%;
-          display: block;
-      }
+        float: none;
+        color: $brand-primary;
+        background: $gray-lighter;
+        padding: .75rem 1rem;
+        form {
+            display: flex;
+        }
+        input[type=text] {
+            width: 100%;
+            border-bottom: none;
+            display: block;
+        }
         button[type=submit] {
-            position: absolute;
-            right: -2.25rem;
-            bottom: .125rem;
+//            position: absolute;
+//            right: -2.25rem;
+//            bottom: .125rem;
+            border-left: 1px solid $gray-light;
+            margin-right: 0;
+            padding-left: 1rem;
         }
     }
   }
+}
+
+@include media-breakpoint-down(xs) {
+    #products,
+    #pagenotfound {
+        .page-not-found {
+            input[type=text] {min-width: auto;}
+        }
+    }
 }
