--- a/themes/fumparfum/_dev/css/partials/_commons.scss
+++ b/themes/fumparfum/_dev/css/partials/_commons.scss
@@ -637,3 +637,7 @@ input:focus {
 #submit-login {
     width: 100%;
 }
+.ui-autocomplete.ui-widget-content {
+    font-size: .75rem;
+    font-family: 'Open Sans', sans-serif;
+}
