--- a/themes/fumparfum/_dev/css/components/categories.scss
+++ b/themes/fumparfum/_dev/css/components/categories.scss
@@ -190,13 +190,14 @@
   }
 }
 .pagination {
-  width: 100%;
+    width: 100%;
     border-top: 1px solid $brand-primary;
     padding-top: 1rem;
     font-size: .75rem;
-  > div:first-child{
-    line-height: 2.5rem;
-  }
+    margin-bottom: 3em;
+      > div:first-child{
+        line-height: 2.5rem;
+      }
   .page-list {
     background: none;
 //    padding: 0.375rem;
