--- a/themes/fumparfum/_dev/css/components/search-widget.scss
+++ b/themes/fumparfum/_dev/css/components/search-widget.scss
@@ -54,3 +54,14 @@
 //    min-width: 15.63rem;
 //  }
 //}
+
+#search {
+    #js-product-list-header {
+        padding-left: 0;
+        padding-bottom: 1.5rem;
+        margin-bottom: 1rem;
+        border-bottom: 1px solid $brand-primary;
+    }
+    .banner.full-width.parallax,
+    #block-reassurance {display: none;}
+}
