--- a/themes/fumparfum/_dev/css/components/categories.scss
+++ b/themes/fumparfum/_dev/css/components/categories.scss
@@ -91,6 +91,7 @@
     display: block;
     color: $brand-primary;
     padding: $small-space $medium-space;
+    font-size: .75rem;
     &:hover {
       background: $gray;
       color: $brand-primary;;
