--- a/themes/fumparfum/_dev/css/components/checkout.scss
+++ b/themes/fumparfum/_dev/css/components/checkout.scss
@@ -279,6 +279,7 @@ body#checkout {
       }
       label {
         text-align: inherit;
+        font-size: .875rem;
       }
     }
     .carrier-delay,
@@ -286,6 +287,7 @@ body#checkout {
       display: inline-block;
       word-break: break-word;
       text-align: left;
+      font-size: .875rem;
     }
     #customer-form,
     #delivery-address,
