--- a/themes/fumparfum/_dev/css/components/custom-text.scss
+++ b/themes/fumparfum/_dev/css/components/custom-text.scss
@@ -40,10 +40,8 @@
 #cms {
     .page-header {
         h1 {
-            text-align: center;
-            margin-bottom: 4rem;
-            margin-left: 1rem;
-            margin-right: 1rem;
+            text-align: left;
+            margin-bottom: 2rem;
             border-bottom: 1px solid $brand-primary;
             padding-bottom: 2rem;
         }
@@ -61,14 +59,95 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            left: 0;            
+            left: 0;
             padding: 1rem;
             display: block;
-            background-color: rgba(0,0,0,.5);
+            background-color: rgba(0, 0, 0, .5);
         }
         &:hover {
             transform: scale(1);
             color: $brand-primary;
+        }
+    }
+    .page-content {
+        &.page-cms {
+            width: 50%;
+            h2 {
+                font-size: 1.25rem;
+                text-transform: uppercase;
+                position: relative;
+                padding-left: 1rem;
+                margin: 1.5rem 0;
+                &:before {
+                    position: absolute;
+                    content: "";
+                    width: 1rem;
+                    height: 1rem;
+                    background: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#848484" d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>');
+                    background-repeat: no-repeat;
+                    background-position-x: -.5rem;
+                    background-size: 1.5rem;
+                    background-position-y: center;
+                    display: inline-block;
+                    padding: .75rem;
+                    left: 0;
+                }
+            }
+            h3,
+            h4 {
+                font-size: 1rem;
+                text-transform: uppercase;
+                margin-bottom: 1.5em;
+            }
+            h4 {
+                font-weight: 400;
+            }
+            p {
+                font-size: .875rem;
+                background-color: $gray-lighter;
+                padding: 1.25rem;
+            }
+        }
+    }
+}
+
+#cms {
+    &.cms-id-2,
+    &.cms-id-6,
+    &.cms-id-7,
+    &.cms-id-8,
+    &.cms-id-9 {
+        .page-header {
+            h1 {
+                text-align: center;
+                margin-bottom: 4rem;
+                margin-left: 1rem;
+                margin-right: 1rem;
+                border-bottom: 1px solid $brand-primary;
+                padding-bottom: 2rem;
+            }
+        }
+        .page-content {
+            max-width: 66.66667%;
+            margin: 0 auto;
+            width: auto;
+            &.card-block {
+                width: 100%;
+                max-width: 100%;
+            }
+
+            h2 {
+                &:before {
+                    content: none;
+                }
+            }
+            p {
+                font-size: .875rem;
+                background-color: transparent;
+                padding: 0;
+                margin-bottom: 1em;
+                text-align: center;
+            }
         }
     }
 }
@@ -79,7 +158,9 @@
     }
     #custom-text {
         padding: 1rem;
-        h2 {font-size: 2.5rem;}
+        h2 {
+            font-size: 2.5rem;
+        }
     }
 
 }
@@ -94,6 +175,75 @@
                 margin-right: 0;
             }
         }
+        .page-content {
+            width: 100%;
+        }
     }
 }
- 
+
+.grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, auto);
+
+    .grid-item1 {
+        grid-column: 1 /3;
+    }
+
+    .grid-item2 {
+        grid-column: 3 / 3;
+        grid-row: 1 / 1;
+    }
+
+    .grid-item3 {
+        grid-column: 4 / 4;
+        grid-row: 1 / 1;
+    }
+
+    .grid-item4 {
+        grid-column: 1/ 1;
+        grid-row: 2 / 2;
+    }
+
+    .grid-item5 {
+        grid-column: 2/ 2;
+        grid-row: 2 / 2;
+    }
+
+    .grid-item6 {
+        grid-column: 1/ 1;
+        grid-row: 3 / 3;
+    }
+
+    .grid-item7 {
+        grid-column: 2/ 2;
+        grid-row: 3 / 3;
+    }
+
+    .grid-item8 {
+        grid-column: 3/ 5;
+        grid-row: 2 / 4;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+    }
+}
+.full-width.grid.studio-gallery {
+    width: 60vw;
+    margin-left: -30vw;
+    margin-right: -30vw;
+}
+
+@media (max-width: 575.98px) {
+    .grid {
+        display: block;
+    }
+    .studio-gallery img {
+        width: 100%;
+        height: auto;
+    }
+}
